# hoard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  Makefile.toml  README.md  cliff.toml  clippy.toml  config.toml.sample  deny.toml  knope.toml  operation_upgrade_test.sh  renovate.json
.github/actions-rs/: grcov.yml
.github/workflows/: check.yml  clippy.yml  publish-mdbook.yml  release.yml
book/: book.toml
book/src/: README.md  SUMMARY.md  file-locations.md  permissions.md  terminology.md
book/src/cli/: README.md  checks.md  flags-subcommands.md  installation.md  logging.md
book/src/config/: README.md  environments.md  envs.md  envvars.md  hoards-piles.md
book/src/getting-started/: README.md  initial-setup.md  installation.md
book/src/getting-started/create-config/: README.md  games.md  hoard.md  vim.md
ci-tests/: config.toml  env-string-named-config.toml  hoard-diff-config.toml  hoard-named-config.toml  hoard-status-config.toml  hoard-upgrade-config.toml  missing-parent-config.toml  operation-checksums-config.toml  pile-named-config.toml  test.py
ci-tests/tests/: __main__.py
ci-tests/tests/testers/: _operation.py  cleanup.py  correct_errors.py  hoard_backup_restore.py  hoard_diff.py  hoard_edit.py  hoard_list.py  hoard_status.py  hoard_tester.py  hoard_upgrade.py  ignore_filter.py  last_paths.py  no_config_dir.py  operation_checksums.py  operations.py  yaml_support.py
src/: backup.rs  builder.rs  combinator.rs  config.rs  diff.rs  env_vars.rs  game.rs  games.rs  hoard_file.rs  hoard_item.rs  lib.rs  logging.rs  main.rs  newtypes.rs  paths.rs  test.rs
src/checkers/: mod.rs
src/checkers/history/: last_paths.rs  mod.rs  operation.rs
src/checkers/history/operation/: mod.rs  util.rs  v1.rs  v2.rs
src/checksum/: digest.rs  mod.rs
src/command/: backup.rs  backup_restore.rs  cleanup.rs  diff.rs  edit.rs  init.rs  list.rs  mod.rs  status.rs  upgrade.rs
src/config/: builder.rs  command.rs  config.rs  envtrie.rs  game.rs  hoard.rs  mod.rs
src/config/builder/: envtrie.rs  hoard.rs  mod.rs  var_defaults.rs
src/config/builder/environment/: envvar.rs  exe.rs  hostname.rs  mod.rs  os.rs  path.rs
src/config/environment/: exe.rs  mod.rs  path.rs
src/dirs/: mod.rs  unix.rs  win.rs
src/environment/: envvar.rs  exe.rs  hostname.rs  mod.rs  os.rs  path.rs
src/filters/: ignore.rs  mod.rs
src/history/: last_paths.rs  mod.rs
src/hoard/: iter.rs  mod.rs  pile_config.rs
src/hoard/iter/: all_files.rs  diff_files.rs  hoard_file.rs  mod.rs  operation.rs
src/hoard_item/: cached.rs  hoard_item.rs  mod.rs
src/newtypes/: environment_name.rs  environment_string.rs  hoard_name.rs  mod.rs  non_empty_pile_name.rs  pile_name.rs
tests/: backup.rs  backup.rs.bak  config.rs  config_precedence_conflict.rs  config_yaml_support.rs  expected_errors.rs  game.rs  hoard_cleanup.rs  hoard_diff.rs  hoard_edit.rs  hoard_edit.rs.bak  hoard_init.rs  hoard_list.rs  hoard_status.rs  hoard_upgrade.rs  ignore_filter.rs  last_paths.rs  lib.rs  operation_checksums.rs  operations.rs  restore_permissions.rs
tests/commands/: test_hoard_list.rs
tests/common/: base.rs  file.rs  mod.rs  test_helper.rs  test_subscriber.rs  tester.rs  toml.rs
tests/config/: envtrie.rs  mod.rs  parse.rs
tests/config/precedence_conflict/: config.toml  mod.rs
tests/fake_editors/: fake-editor.ps1  fake-editor.sh  fake-error-editor.ps1  fake-error-editor.sh  mod.rs  unix.rs  windows.rs
