[package]
name = "hoard"
version = "0.4.0"
authors = ["Michael Bryant <shadow53@shadow53.com>"]
edition = "2021"
license = "BSD-3-Clause"
description = "Hoard backups of files across your filesystem into one location."
homepage = "https://github.com/Shadow53/hoard"
repository = "https://github.com/Shadow53/hoard"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["yaml"]
yaml = ["serde_yaml"]

[dependencies]
atty = "0.2"
glob = "0.3"
hostname = "0.3"
itertools = "0.10"
md-5 = "0.9"
once_cell = "1.9"
open_cmd = { version = "0.1.0", features = ["tracing"]}
petgraph = "0.6"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { version = "0.8", optional = true }
sha2 = "0.10"
similar = { version = "2.1", default-features = false, features = ["text"] }
structopt = "0.3.26"
tempfile = "3.3"
thiserror = "1.0.30"
time = { version = "0.3", default-features = false, features = ["formatting", "macros", "serde", "std"] }
toml = "0.5.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "fmt", "env-filter", "smallvec", "std"] }
uuid = { version = "0.8", features = ["serde", "v4"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.33", features = ["Storage", "Win32_UI_Shell", "Win32_Foundation", "Win32_Globalization"] }

[dev-dependencies]
maplit = "1.0"
paste = "1.0"
rand = "0.8"
serde_test = "1.0"

[target.'cfg(windows)'.dev-dependencies]
registry = "1.2"

[target.'cfg(unix)'.dev-dependencies]
nix = "0.23"
pty_closure = "0.1"
