[package]
name = "hoard"
version = "0.6.0"
authors = ["Michael Bryant <shadow53@shadow53.com>"]
edition = "2021"
license = "BSD-3-Clause"
description = "Hoard backups of files across your filesystem into one location."
homepage = "https://github.com/Shadow53/hoard"
repository = "https://github.com/Shadow53/hoard"
rust-version = "1.70.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["yaml"]
yaml = ["serde_yaml"]

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
clap = { version = "4.3", features = ["derive", "wrap_help"] }
digest = "0.10.7"
futures = { version = "0.3", default-features = false, features = [] }
glob = "0.3"
hex = "0.4.3"
hostname = "0.3"
itertools = "0.11.0"
md-5 = "0.10.5"
once_cell = "1.19.0"
open_cmd = { version = "0.1.0", features = ["tracing"] }
petgraph = "0.6"
regex = "1.8"
# Use at least 1.0.184 because of serde-rs/serde#2538
serde = { version = ">=1.0.184", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { version = "0.9", optional = true }
sha2 = "0.10.7"
similar = { version = "2.2", default-features = false, features = ["text"] }
tap = "1.0"
tempfile = "3.6"
thiserror = "1.0.40"
time = { version = "0.3", default-features = false, features = ["formatting", "macros", "serde", "std"] }
tokio = { version = "1.28", default-features = false, features = ["rt-multi-thread", "fs", "io-util", "macros"] }
tokio-stream = { version = "0.1", default-features = false, features = ["fs"] }
toml = "0.8.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "fmt", "env-filter", "smallvec", "std"] }
uuid = { version = "1.3", features = ["serde", "v4"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.51", features = ["Storage", "Win32_UI_Shell", "Win32_Foundation", "Win32_Globalization"] }

[dev-dependencies]
maplit = "1.0"
rand = "0.8"
serde_test = "1.0"
futures = { version = "0.3", default-features = false, features = ["executor"] }
tokio = { version = "1.28", default-features = false, features = ["process"] }
serial_test = "2.0.0"

[target.'cfg(windows)'.dev-dependencies]
registry = "1.2"

[target.'cfg(unix)'.dev-dependencies]
nix = "0.27"
pty_closure = "0.1"
